Fix dark mode toggle and have dark mode as default

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,9 +18,7 @@
   --gray700: #777777;
   --gray800: #888888;
   --gray900: #999999;
-}
 
-.dark-mode {
   --base-text: var(--gray900);
   --background: var(--gray100);
   --surface: var(--gray200);
